--- a/dictionary/dictionary.csproj
+++ b/dictionary/dictionary.csproj
@@ -95,6 +95,12 @@
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
     <Compile Include="Speaker.cs" />
+    <Compile Include="Translate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Translate.Designer.cs">
+      <DependentUpon>Translate.cs</DependentUpon>
+    </Compile>
     <Compile Include="WordData.cs" />
     <EmbeddedResource Include="Bookmark.resx">
       <DependentUpon>Bookmark.cs</DependentUpon>
@@ -123,6 +129,9 @@
     </Compile>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Translate.resx">
+      <DependentUpon>Translate.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
