--- a/dictionary/dictionary.csproj
+++ b/dictionary/dictionary.csproj
@@ -153,6 +153,8 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="bin\Debug\maindata.xml" />
+    <None Include="Resources\analysis.png" />
+    <None Include="Resources\examination.png" />
     <None Include="Resources\idea.png" />
     <None Include="Resources\vietnam.png" />
     <None Include="Resources\united-kingdom.png" />
