Use of 3 layer - model, connect to local database, first design of FeedBack Form

--- a/Dictionary_user/App.config
+++ b/Dictionary_user/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Dictionary_user.Properties.Settings.DictionaryDBConnectionString"
+            connectionString="Data Source=DESKTOP-MFH0KDH\SQLEXPRESS;Initial Catalog=DictionaryDB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
