--- a/Dictionary_user/Dictionary_user.csproj
+++ b/Dictionary_user/Dictionary_user.csproj
@@ -62,6 +62,11 @@
     </Compile>
     <Compile Include="CustomizeLinkLabel.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="DictionaryDBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DictionaryDBDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DictionaryItem.cs" />
     <Compile Include="DictionaryManager.cs" />
     <Compile Include="Feedback.cs">
@@ -135,6 +140,17 @@
     <EmbeddedResource Include="Translate.resx">
       <DependentUpon>Translate.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DictionaryDBDataSet.xsc">
+      <DependentUpon>DictionaryDBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DictionaryDBDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DictionaryDBDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DictionaryDBDataSet.xss">
+      <DependentUpon>DictionaryDBDataSet.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -172,6 +188,24 @@
     <None Include="Resources\speakers.png" />
     <None Include="Resources\CTBMMN.png" />
     <None Include="Resources\loupe.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLogicTier\BusinessLogicTier.csproj">
+      <Project>{707ff483-5ab8-4cff-84d3-559c14887457}</Project>
+      <Name>BusinessLogicTier</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataAccessTier\DataAccessTier.csproj">
+      <Project>{accb7e23-8477-4795-b1ef-3cffe5d5cf9a}</Project>
+      <Name>DataAccessTier</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DictionaryDTO\DictionaryDTO.csproj">
+      <Project>{b91dc873-4e27-4627-a1c1-5ec2eb613d61}</Project>
+      <Name>DictionaryDTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dictionary_host\Dictionary_host.csproj">
+      <Project>{881a789e-790b-4176-81ee-5efa8acdc040}</Project>
+      <Name>Dictionary_host</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
