--- a/BusinessLogicTier/BusinessLogicTier.csproj
+++ b/BusinessLogicTier/BusinessLogicTier.csproj
@@ -46,22 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connection_BUS.cs" />
-    <Compile Include="FeedBack.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FeedBack.Designer.cs">
-      <DependentUpon>FeedBack.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Help.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Help.Designer.cs">
-      <DependentUpon>Help.cs</DependentUpon>
-    </Compile>
+    <Compile Include="FeedBack_BUS.cs" />
     <Compile Include="VN_EN_BUS.cs" />
     <Compile Include="EN_VN_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VN_EN_History_BUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccessTier\DataAccessTier.csproj">
@@ -72,14 +61,6 @@
       <Project>{b91dc873-4e27-4627-a1c1-5ec2eb613d61}</Project>
       <Name>DictionaryDTO</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Feedback.resx">
-      <DependentUpon>FeedBack.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Help.resx">
-      <DependentUpon>Help.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
