--- a/DataAccessTier/DataAccessTier.csproj
+++ b/DataAccessTier/DataAccessTier.csproj
@@ -42,8 +42,10 @@
   <ItemGroup>
     <Compile Include="DBConnection.cs" />
     <Compile Include="EN_VN_DAO.cs" />
+    <Compile Include="FeedBackDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VN_EN_DAO.cs" />
+    <Compile Include="VN_EN_History_DAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DictionaryDTO\DictionaryDTO.csproj">
