--- a/Dictionary_user/Dictionary_user.csproj
+++ b/Dictionary_user/Dictionary_user.csproj
@@ -148,6 +148,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\Bunifu_UI_v1.52.dll" />
+    <None Include="Resources\clock.png" />
+    <None Include="Resources\calendar %281%29.png" />
     <None Include="Resources\calendar.png" />
     <None Include="Resources\cubes.png" />
     <None Include="Resources\bookmark %281%29.png" />
