--- a/Dictionary_user/Dictionary_user.csproj
+++ b/Dictionary_user/Dictionary_user.csproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\Bunifu_UI_v1.52.dll" />
+    <None Include="Resources\dictionary %281%29.png" />
     <None Include="Resources\report.png" />
     <None Include="Resources\seo.png" />
     <None Include="Resources\dictionary.png" />
