--- a/Dictionary_user/packages.config
+++ b/Dictionary_user/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net452" />
   <package id="FontAwesome.Sharp" version="5.15.1" targetFramework="net452" />
 </packages>
