--- a/Dictionary_user/Dictionary_user.csproj
+++ b/Dictionary_user/Dictionary_user.csproj
@@ -146,6 +146,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\Bunifu_UI_v1.52.dll" />
+    <None Include="Resources\south-korea.png" />
+    <None Include="Resources\japan.png" />
     <None Include="Resources\china.png" />
     <None Include="Resources\russia.png" />
     <None Include="Resources\portugal.png" />
